// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertPopup calls the close function when button pressed 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "height": 1334,
          "width": 750,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderStyle": "solid",
          "borderWidth": 1,
          "marginLeft": "7.5%",
          "marginRight": "7.5%",
          "width": 637.5,
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "center",
            "paddingTop": 13.34,
            "width": "90%",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.5}
          style={
            Object {
              "color": "#104e01",
              "fontSize": 33.65552620959067,
              "fontWeight": "bold",
            }
          }
        >
          Here is a mock alert question that's being asked
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "borderColor": "red",
              "borderWidth": 0,
              "overflow": "hidden",
              "width": "100%",
            },
            Object {
              "marginBottom": 26.68,
              "marginTop": 26.68,
              "width": 600,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "purple",
                "borderRadius": 11.25,
                "borderWidth": 0,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginTop": 6.67,
                "minHeight": 80.03999999999999,
                "overflow": "hidden",
                "width": "100%",
              },
              Object {
                "justifyContent": "space-around",
              },
            ]
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="closeButton"
          >
            <Icon
              name="cancel"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              mock close text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="yesButton"
          >
            <Icon
              name="check"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              mock yes text
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`AlertPopup calls the yes function when button pressed 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "height": 1334,
          "width": 750,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderStyle": "solid",
          "borderWidth": 1,
          "marginLeft": "7.5%",
          "marginRight": "7.5%",
          "width": 637.5,
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "center",
            "paddingTop": 13.34,
            "width": "90%",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.5}
          style={
            Object {
              "color": "#104e01",
              "fontSize": 33.65552620959067,
              "fontWeight": "bold",
            }
          }
        >
          Here is a mock alert question that's being asked
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "borderColor": "red",
              "borderWidth": 0,
              "overflow": "hidden",
              "width": "100%",
            },
            Object {
              "marginBottom": 26.68,
              "marginTop": 26.68,
              "width": 600,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "purple",
                "borderRadius": 11.25,
                "borderWidth": 0,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginTop": 6.67,
                "minHeight": 80.03999999999999,
                "overflow": "hidden",
                "width": "100%",
              },
              Object {
                "justifyContent": "space-around",
              },
            ]
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="closeButton"
          >
            <Icon
              name="cancel"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              mock close text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="yesButton"
          >
            <Icon
              name="check"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              mock yes text
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`AlertPopup renders with 1 button when no close button and customizable text 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "height": 1334,
          "width": 750,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderStyle": "solid",
          "borderWidth": 1,
          "marginLeft": "7.5%",
          "marginRight": "7.5%",
          "width": 637.5,
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "center",
            "paddingTop": 13.34,
            "width": "90%",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.5}
          style={
            Object {
              "color": "#104e01",
              "fontSize": 33.65552620959067,
              "fontWeight": "bold",
            }
          }
        >
          Here is a mock alert question that's being asked
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "borderColor": "red",
              "borderWidth": 0,
              "overflow": "hidden",
              "width": "100%",
            },
            Object {
              "marginBottom": 26.68,
              "marginTop": 26.68,
              "width": 600,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "purple",
                "borderRadius": 11.25,
                "borderWidth": 0,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginTop": 6.67,
                "minHeight": 80.03999999999999,
                "overflow": "hidden",
                "width": "100%",
              },
              Object {
                "justifyContent": "space-around",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#104e01",
                  "borderColor": "#104e01",
                  "borderRadius": 11.25,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "height": "100%",
                  "justifyContent": "space-evenly",
                  "maxWidth": "50%",
                  "minHeight": 80.03999999999999,
                  "minWidth": 285,
                },
                Object {
                  "opacity": 0,
                },
              ]
            }
          />
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="yesButton"
          >
            <Icon
              name="check"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              Yes button text
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`AlertPopup renders with 2 buttons and customizable text 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "height": 1334,
          "width": 750,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderStyle": "solid",
          "borderWidth": 1,
          "marginLeft": "7.5%",
          "marginRight": "7.5%",
          "width": 637.5,
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "center",
            "paddingTop": 13.34,
            "width": "90%",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.5}
          style={
            Object {
              "color": "#104e01",
              "fontSize": 33.65552620959067,
              "fontWeight": "bold",
            }
          }
        >
          Here is a mock alert question that's being asked
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "borderColor": "red",
              "borderWidth": 0,
              "overflow": "hidden",
              "width": "100%",
            },
            Object {
              "marginBottom": 26.68,
              "marginTop": 26.68,
              "width": 600,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "purple",
                "borderRadius": 11.25,
                "borderWidth": 0,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginTop": 6.67,
                "minHeight": 80.03999999999999,
                "overflow": "hidden",
                "width": "100%",
              },
              Object {
                "justifyContent": "space-around",
              },
            ]
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="closeButton"
          >
            <Icon
              name="cancel"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              mock close text
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="yesButton"
          >
            <Icon
              name="check"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              mock yes text
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`AlertPopup renders with 2 buttons and default text 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    accessibilityRole="alert"
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
        },
        Object {
          "height": 1334,
          "width": 750,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff59b",
          "borderColor": "#104e01",
          "borderRadius": 11.25,
          "borderStyle": "solid",
          "borderWidth": 1,
          "marginLeft": "7.5%",
          "marginRight": "7.5%",
          "width": 637.5,
        }
      }
    >
      <View
        style={
          Object {
            "justifyContent": "center",
            "paddingTop": 13.34,
            "width": "90%",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.5}
          style={
            Object {
              "color": "#104e01",
              "fontSize": 33.65552620959067,
              "fontWeight": "bold",
            }
          }
        >
          Here is a mock alert question that's being asked
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "borderColor": "red",
              "borderWidth": 0,
              "overflow": "hidden",
              "width": "100%",
            },
            Object {
              "marginBottom": 26.68,
              "marginTop": 26.68,
              "width": 600,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "purple",
                "borderRadius": 11.25,
                "borderWidth": 0,
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "marginTop": 6.67,
                "minHeight": 80.03999999999999,
                "overflow": "hidden",
                "width": "100%",
              },
              Object {
                "justifyContent": "space-around",
              },
            ]
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="closeButton"
          >
            <Icon
              name="cancel"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              Cancel
            </Text>
          </View>
          <View
            accessibilityRole="button"
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#104e01",
                "borderColor": "#104e01",
                "borderRadius": 11.25,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": "100%",
                "justifyContent": "space-evenly",
                "maxWidth": "50%",
                "minHeight": 80.03999999999999,
                "minWidth": 285,
                "opacity": 1,
              }
            }
            testID="yesButton"
          >
            <Icon
              name="check"
              size={53.36}
              style={
                Object {
                  "color": "#fff59b",
                }
              }
            />
            <Text
              maxFontSizeMultiplier={2}
              style={
                Object {
                  "color": "#fff59b",
                  "fontSize": 27.53633962602873,
                  "fontWeight": "bold",
                  "paddingHorizontal": 7.5,
                  "textAlign": "center",
                }
              }
            >
              Yes
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
